# free-cerebras

./: README.md
src/: accounts.txt  app.py  config.py  main.py  pyproject.toml  register.py  requirements.txt  temp_email.py  test_keys.py
src/templates/: index.html
