[project]
name = "signup"
version = "0.1.0"
description = "Cerebras 批量自动注册工具 - By Isla7940"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "flask>=3.1.0",
]

[project.scripts]
cerebras = "main:main"
